# urkel

./: .fossa.yml  .gitignore  Cargo.toml  NOTICE.txt  README.md  build.rs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATES/: bug_report.md  feature_request.md
.openapi-generator/: FILES
docs/: Assertion.md  AuthorizationModel.md  CheckRequest.md  CheckResponse.md  Computed.md  ContextualTupleKeys.md  CreateStoreRequest.md  CreateStoreResponse.md  Difference.md  ErrorCode.md  ExpandRequest.md  ExpandResponse.md  GetStoreResponse.md  InternalErrorCode.md  InternalErrorMessageResponse.md  Leaf.md  ListObjectsRequest.md  ListObjectsResponse.md  ListStoresResponse.md  Metadata.md  Node.md  Nodes.md  NotFoundErrorCode.md  ObjectRelation.md  OpenFgaApi.md  PathUnknownErrorMessageResponse.md  ReadAssertionsResponse.md  ReadAuthorizationModelResponse.md  ReadAuthorizationModelsResponse.md  ReadChangesResponse.md  ReadRequest.md  ReadResponse.md  RelationMetadata.md  RelationReference.md  Status.md  Store.md  Tuple.md  TupleChange.md  TupleKey.md  TupleKeys.md  (+16 more)
graveyard/: mod.rs  verify_proof.rs
proto/: buf.yaml
src/: main.rs
src/apis/: configuration.rs  fga_grpc.rs  mod.rs  open_fga_api.rs
src/models/: any.rs  assertion.rs  authorization_model.rs  batch_check_response.rs  check_horizontal_request.rs  check_n_of_m_request.rs  check_request.rs  check_response.rs  computed.rs  contextual_tuple_keys.rs  create_store_request.rs  create_store_response.rs  difference.rs  error_code.rs  expand_request.rs  expand_response.rs  get_store_response.rs  internal_error_code.rs  internal_error_message_response.rs  leaf.rs  list_objects_request.rs  list_objects_response.rs  list_stores_response.rs  metadata.rs  mod.rs  node.rs  nodes.rs  not_found_error_code.rs  object_relation.rs  path_unknown_error_message_response.rs  read_assertions_response.rs  read_authorization_model_response.rs  read_authorization_models_response.rs  read_changes_response.rs  read_request.rs  read_response.rs  status.rs  (+23 more)
(+3 files in other folders)
