[package]
name = "urkel"
version = "0.0.1"
authors = ["support@papertree.earth"]
description = "
Urkel is a light wrapper around the OpenFGA API with additional support for non-traditional authorization schemes such as n-of-m, unanimous consensus, and more."
license = "Apache-2.0"
edition = "2018"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
