[package]
name = "urkel"
version = "0.0.1"
authors = ["support@papertree.earth"]
description = "A gRPC client and HTTP wrapping server for Open FGA, built in Rust."
license = "Apache-2.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
prost-wkt = "0.4.1"
prost-wkt-types = "0.4.1"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[build-dependencies]
prost-build = "0.11.9"
prost-wkt-build = "0.4.1"
tonic-build = "0.9.2"
